<resources>
    <string name="app_name">도담도담</string>
    <string name="kakao_native_key">a1f1fa77f90e70af62243eda95593018</string>
    <string name="kakao_manifest_key">kakaoa1f1fa77f90e70af62243eda95593018</string>
    <string name="bot_settingfragment">설정</string>
    <string name="bot_albumfragment">앨범</string>
    <string name="bot_calendarfragment">캘린더</string>
    <string name="bot_chattingfragment">채팅</string>
    <string name="bot_main_familyfragment">홈</string>
    <string name="before">이전</string>
    <string name="next">다음</string>
    <string name="search">검색</string>
    <string name="yes">예</string>
    <string name="no">아니오</string>
    <string name="tab_family">Family</string>
    <string name="tab_event">Event</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_today_expression">표현하기</string>
    <string name="main_today_status">우리가족</string>
    <string name="main_today_schedule">오늘의 일정</string>
    <string name="main_add_schedule">등록하기</string>
    <string name="main_opinion">의견 제시</string>
    <string name="main_add_opinion">등록</string>
    <string name="main_event">가족 이벤트 만들기</string>
    <string name="main_roulette">당번뽑기</string>
    <string name="main_wishtree">소원나무</string>
    <string name="main_surprise">서프라이즈 파티</string>
    <string name="father">아빠</string>
    <string name="mother">엄마</string>
    <string name="son">아들</string>
    <string name="daughter">딸</string>
    <string name="chatting_submit">전송</string>
    <string name="album_search">검색</string>
    <string name="setting_info_edit">개인정보 변경</string>
    <string name="setting_status_edit">가족 사진 변경</string>
    <string name="setting_family_code">가족 코드</string>
    <string name="setting_exit_group">가족 나가기</string>
    <string name="setting_logout">로그아웃</string>
    <string name="logout">로그아웃</string>
    <string name="Welcome">Welcome</string>
    <string name="SignUp">Sign Up</string>
    <string name="FindID">Find ID</string>
    <string name="FindPW">Find PW</string>
    <string name="login">로그인</string>
    <string name="ID">아이디</string>
    <string name="duplication_check">중복확인</string>
    <string name="password">password</string>
    <string name="PW">비밀번호</string>
    <string name="PW_confirm">비밀번호 확인</string>
    <string name="name">이름</string>
    <string name="find_user">계정찾기</string>
    <string name="sign">회원가입</string>
    <string name="birthday">생년월일</string>
    <string name="family_code">가족 코드</string>
    <string name="family_code_input">가족 코드 입력</string>
    <string name="PW_new">새 비밀번호</string>
    <string name="PW_confirm_new">새 비밀번호 확인</string>
    <string name="confirm_change">수정 완료</string>
    <string name="default_status_message">오늘 기분 최고!</string>
    <string name="idErrorMessage">올바르지 않은 아이디이에요.</string>
    <string name="nameErrorMessage">올바르지 않은 이름이에요. \n (공백은 안돼요, 10자 미만)</string>
    <string name="nickNameErrorMessage">올바르지 않은 별명이에요.</string>
    <string name="passwordErrorMessage">올바르지 않은 비밀번호이에요. \n (숫자,특수문자 포함 8자리 이상)</string>
    <string name="passwordCheckErrorMessage">입력한 비밀번호와 달라요.</string>
    <string name="phoneNumberErrorMessage">올바르지 않은 휴대전화번호이에요.</string>
    <string name="birthdayErrorMessage">올바르지 않은 생년월일이에요.</string>
    <string name="emailNotCheckedErrorMessage">이메일 중복 검사를 눌러주세요.</string>
    <string name="genderNotCheckedErrorMessage">성별을 선택해주세요.</string>
    <string name="networkErrorMessage">네트워크 연결이 불안정해요.</string>
    <string name="unknownErrorMessage">알 수 없는 에러에요.</string>
    <string name="sameIdErrorMessage">중복된 아이디에요.</string>
    <string name="sameIdSuccesMessage">사용할 수 있는 아이디에요.</string>
    <string name="familyCodeErrorMessage">가족코드는 알파벳과 숫자 15자리로 구성되어 있어요.</string>
    <string name="askDelete">삭제하시겠어요?</string>
    <string name="edit_status_guide">오늘 나의 상태를 표현해주세요.</string>
    <string name="select_family_picture_guide">변경할 가족 사진을 선택해주세요.</string>
    <string name="todays_condition">오늘의 기분</string>
    <string name="todays_message">오늘의 한마디</string>
    <string name="confirm">확인</string>
    <string name="sample_message">Sample Message</string>
    <string name="save_yourself">\'나\'를 저장하세요!</string>
    <string name="ask_family_code">가족 코드를 갖고 계신가요?</string>
    <string name="please_input_family_code">가족 코드를 입력해주세요!</string>
    <string name="nickname">나의 애칭</string>
    <string name="wishtree_top_message">나만의 소원을 등록해보세요!</string>
    <string name="wishtree_create_guide_message">당신의 소원은 무엇인가요?</string>
    <string name="wishtree">소원 나무</string>
    <string name="add_wish">소원 생성</string>
    <string name="update_wish">소원 수정</string>
    <string name="my_wish">나의 소원</string>
    <string name="statusisnull">아직 오늘의 상태를 등록하지 않았어요</string>
    <string-array name="expression">
        <item>표현1</item>
        <item>표현2</item>
        <item>표현3</item>
        <item>표현4</item>
        <item>표현5</item>
        <item>표현6</item>
        <item>표현7</item>
        <item>표현8</item>
    </string-array>
    <string-array name="emoticon">
        <item>https://s3-dodamdodam.s3.ap-northeast-2.amazonaws.com/emoticon/tongue_1651796200157.png</item>
        <item>https://s3-dodamdodam.s3.ap-northeast-2.amazonaws.com/emoticon/sweat_1651796229546.png</item>
        <item>https://s3-dodamdodam.s3.ap-northeast-2.amazonaws.com/emoticon/sunglasses_1651796248926.png</item>
        <item>https://s3-dodamdodam.s3.ap-northeast-2.amazonaws.com/emoticon/smiling_1651796259441.png</item>
        <item>https://s3-dodamdodam.s3.ap-northeast-2.amazonaws.com/emoticon/determined_1651797027613.png</item>
        <item>https://s3-dodamdodam.s3.ap-northeast-2.amazonaws.com/emoticon/sleepy_1651796273416.png</item>
        <item>https://s3-dodamdodam.s3.ap-northeast-2.amazonaws.com/emoticon/worried_1651796157938.png</item>
        <item>https://s3-dodamdodam.s3.ap-northeast-2.amazonaws.com/emoticon/relieved_1651796300873.png</item>
        <item>https://s3-dodamdodam.s3.ap-northeast-2.amazonaws.com/emoticon/pouting_1651796318280.png</item>
        <item>https://s3-dodamdodam.s3.ap-northeast-2.amazonaws.com/emoticon/mask_1651796329279.png</item>
        <item>https://s3-dodamdodam.s3.ap-northeast-2.amazonaws.com/emoticon/thinking_1651796217293.png</item>
        <item>https://s3-dodamdodam.s3.ap-northeast-2.amazonaws.com/emoticon/laughing_1651796988741.png</item>
        <item>https://s3-dodamdodam.s3.ap-northeast-2.amazonaws.com/emoticon/kiss_1651796999956.png</item>
        <item>https://s3-dodamdodam.s3.ap-northeast-2.amazonaws.com/emoticon/hushed_1651797014053.png</item>
        <item>https://s3-dodamdodam.s3.ap-northeast-2.amazonaws.com/emoticon/rolling%20eyes_1651796286143.png</item>
        <item>https://s3-dodamdodam.s3.ap-northeast-2.amazonaws.com/emoticon/crying_1651797037512.png</item>
        <item>https://s3-dodamdodam.s3.ap-northeast-2.amazonaws.com/emoticon/astonished_1651797046845.png</item>
        <item>https://s3-dodamdodam.s3.ap-northeast-2.amazonaws.com/emoticon/amusing_1651797058209.png</item>
        <item>https://s3-dodamdodam.s3.ap-northeast-2.amazonaws.com/emoticon/3099549_face_expressionless_1651797073670.png</item>
        <item>https://s3-dodamdodam.s3.ap-northeast-2.amazonaws.com/emoticon/3099548_face_confused_1651797084596.png</item>
    </string-array>
</resources>