<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.SignFragment">
    <include
        android:id="@+id/sign_page_top"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="8dp"
        layout="@layout/schedule_top_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/sign_page_logo"
        android:layout_width="283dp"
        android:layout_height="228dp"
        android:layout_marginTop="12dp"
        android:foregroundGravity="center_horizontal"
        android:src="@drawable/main_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/sign_page_form_box"
        android:layout_width="295dp"
        android:layout_height="488dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="269dp"
        android:background="@drawable/form_white_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/sign_page_Input_ID_box"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="320dp">

        <EditText
            android:id="@+id/sign_page_Input_ID"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/spoqahansans"
            android:inputType="textPersonName"
            android:hint="@string/ID"
            android:textColorHint="@color/pink01"
            android:textColor="@color/pink01"
            android:textSize="20sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/sign_page_checkID_btn"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:background="@drawable/box_roulette"
            android:elevation="5dp"
            android:gravity="center"
            android:text="@string/duplication_check"
            android:textSize="12sp"
            android:textStyle="bold"
            android:fontFamily="@font/spoqahansans"
            android:textColor="@color/white"/>

    </LinearLayout>

    <EditText
        android:id="@+id/sign_page_Input_username"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/name"
        android:textColorHint="@color/pink01"
        android:textColor="@color/pink01"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="410dp"/>
    <EditText
        android:id="@+id/sign_page_Input_PW"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textWebPassword"
        android:hint="@string/PW"
        android:textColorHint="@color/pink01"
        android:textColor="@color/pink01"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="490dp"/>
    <EditText
        android:id="@+id/sign_page_Input_PW_confirm"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textWebPassword"
        android:hint="@string/PW_confirm"
        android:textColorHint="@color/pink01"
        android:textColor="@color/pink01"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="570dp"/>

    <TextView
        android:id="@+id/sign_page_sign_btn"
        android:layout_width="233dp"
        android:layout_height="55dp"
        android:background="@drawable/box_roulette"
        android:elevation="5dp"
        android:gravity="center"
        android:text="@string/sign"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:fontFamily="@font/spoqahansans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="645dp"/>
    <ProgressBar
        android:id="@+id/progressBar_loginF_loading"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>