<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.LoginFragment">

    <ImageView
        android:id="@+id/findID_page_logo"
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:layout_marginTop="25dp"
        android:foregroundGravity="center_horizontal"
        android:src="@drawable/main_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/findID_page_form_box"
        android:layout_width="295dp"
        android:layout_height="390dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="300dp"
        android:background="@drawable/form_white_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_findIDF_name"
        style="@style/TextInputLayoutStyle"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="330dp"
        android:layout_weight="20"
        android:hint="@string/name"
        app:boxStrokeColor="@color/pink01"
        app:hintTextColor="@color/pink01"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/findID_page_input_name"
            style="@style/TextInputStyle"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/pink01"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_findIDF_birthday"
        style="@style/TextInputLayoutStyle"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="410dp"
        android:layout_weight="20"
        android:hint="@string/birthday"
        app:boxStrokeColor="@color/pink01"
        app:hintTextColor="@color/pink01"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/findID_page_input_birthday"
            style="@style/TextInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/pink01"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_findIDF_family_code"
        style="@style/TextInputLayoutStyle"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="490dp"
        android:layout_weight="20"
        android:hint="@string/family_code"
        app:boxStrokeColor="@color/pink01"
        app:hintTextColor="@color/pink01"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/findID_page_input_family_code"
            style="@style/TextInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/pink01"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/findID_page_findID_btn"
        android:layout_width="233dp"
        android:layout_height="55dp"
        android:background="@drawable/box_roulette"
        android:elevation="5dp"
        android:gravity="center"
        android:text="@string/find_user"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="590dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>